RESOLVED FIXED123622
[GTK] Fix build on non-linux platforms
https://bugs.webkit.org/show_bug.cgi?id=123622
Summary [GTK] Fix build on non-linux platforms
Emilio Pozuelo Monfort
Reported 2013-11-01 10:25:41 PDT
webkit 2.2.1 has started to fail to build on debian/kfreebsd and debian/hurd because of a missing socket.h include. I guess it was working before because of an indirect include, as ProcessLauncherGtk.cpp hasn't changed in this regard. The proposed fix drops the prctl include which is unnecessary and includes socket.h on every UNIX platform (as that's a file mandated by POSIX). It fixes the build in both mentioned platforms in Debian, and probably benefits other UNIX-like platforms.
Attachments
Patch (1.19 KB, patch)
2013-11-01 10:27 PDT, Emilio Pozuelo Monfort
no flags
Emilio Pozuelo Monfort
Comment 1 2013-11-01 10:27:41 PDT
WebKit Commit Bot
Comment 2 2013-11-01 11:46:30 PDT
Comment on attachment 215739 [details] Patch Clearing flags on attachment: 215739 Committed r158444: <http://trac.webkit.org/changeset/158444>
WebKit Commit Bot
Comment 3 2013-11-01 11:46:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.