Fix build on non-linux platforms https://bugs.webkit.org/show_bug.cgi?id=123622

Patch by Emilio Pozuelo Monfort <pochu27@gmail.com> on 2013-11-01
Reviewed by Darin Adler.

* UIProcess/Launcher/gtk/ProcessLauncherGtk.cpp:

Canonical link: https://commits.webkit.org/141800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158444 268f45cc-cd09-0410-ab3c-d52691b4dbfc